--- a/styles/config/sizes.scss
+++ b/styles/config/sizes.scss
@@ -1,13 +1,13 @@
-$size-xlarge:     3em     !default;  // 48px
-$size-largest:    2.5em   !default;  // 40px
-$size-larger:     2em     !default;  // 32px
-$size-large:      1.5em   !default;  // 24px
-$size-largish:    1.25em  !default;  // 20px
-$size-medium:     1em     !default;  // 16px
-$size-smallish:   0.875em !default;  // 14px
-$size-small:      0.75em  !default;  // 12px
-$size-smaller:    0.625em !default;  // 10px
-$size-smallest:   0.5em   !default;  // 8px
+$size-xlarge:     3rem     !default;  // 48px
+$size-largest:    2.5rem   !default;  // 40px
+$size-larger:     2rem     !default;  // 32px
+$size-large:      1.5rem   !default;  // 24px
+$size-largish:    1.25rem  !default;  // 20px
+$size-medium:     1rem     !default;  // 16px
+$size-smallish:   0.875rem !default;  // 14px
+$size-small:      0.75rem  !default;  // 12px
+$size-smaller:    0.625rem !default;  // 10px
+$size-smallest:   0.5rem   !default;  // 8px
 
 $sizes: (
     xlarge:    $size-xlarge,
