--- a/website/styles/modules/all.scss
+++ b/website/styles/modules/all.scss
@@ -3,5 +3,6 @@
 @import "site.scss";
 @import "utils.scss";
 @import "code.scss";
+@import "icon.scss";
 @import "palette.scss";
 @import "svg.scss";
