Local storage palettes

--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,6 +1,6 @@
 $button-border-width:     1px !default;
 $button-border-radius:    $unit-radius !default;
-$button-padding:          $unit-pad-v * 2 $unit-pad-h * 2 !default;
+$button-padding:          0.5em 1em !default;
 $button-transition:       0.3s;
 $button-hover-transition: 0.2s;
 
