--- a/website/styles/modules/icon.scss
+++ b/website/styles/modules/icon.scss
@@ -3,6 +3,7 @@ svg.icon {
   box-sizing: content-box;
   display: inline-block;
   height: 1em;
+  line-height: 1;
   overflow: visible;
   vertical-align: -.125em;
   &.icon-left {
