--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -49,7 +49,7 @@
     h4 {
       margin-bottom: 0.5rem;
     }
-    a {
+    .item {
       transition: all 0.5s;
       display: block;
       margin-bottom: 0rem;
@@ -58,6 +58,7 @@
       color: var(--menu-text);
       background-color: var(--menu-back);
       border-bottom: 1px solid var(--menu-border);
+      cursor: pointer;
       // border-left: 5px solid var(--menu-border);
       // box-shadow: var(--shadow-1);
       &:hover {
