--- a/website/styles/modules/palette.scss
+++ b/website/styles/modules/palette.scss
@@ -139,3 +139,11 @@ section.palette {
     }
   }
 }
+
+.loading {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  font-size: 2rem;
+}
