--- a/website/styles/modules/palette.scss
+++ b/website/styles/modules/palette.scss
@@ -111,10 +111,14 @@ section.palette {
             align-items: center;
             justify-content: center;
           }
+          .info .locked {
+            // opacity: 0.3;
+            display: none;
+          }
         }
         &.dark .hover-overlay {
-          background-color: rgba(white, 0.5);
-          color: black;
+          //background-color: rgba(white, 0.5);
+          //color: black;
         }
       }
     }
@@ -140,10 +144,3 @@ section.palette {
   }
 }
 
-.loading {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  justify-content: center;
-  font-size: 2rem;
-}
