--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -46,16 +46,20 @@
   .menu {
     border: 0;
     margin-bottom: 2rem;
+    user-select: none;
     h4 {
       margin-bottom: 0.5rem;
     }
+    a {
+      color: var(--menu-text);
+      text-decoration: none;
+    }
+
     .item {
       transition: all 0.5s;
       display: block;
       margin-bottom: 0rem;
       padding: 0.25rem 0.5rem;
-      text-decoration: none;
-      color: var(--menu-text);
       background-color: var(--menu-back);
       border-bottom: 1px solid var(--menu-border);
       cursor: pointer;
@@ -67,21 +71,52 @@
         background-color: var(--menu-hover-back);
         // border-color: var(--menu-hover-border);
       }
-      &.active {
-        color: var(--menu-active-text);
-        background-color: var(--app-main-back);
-        // border-color: var(--menu-active-border);
-      }
       &:last-child {
         border-bottom: 0;
       }
     }
+    .active {
+      color: var(--menu-active-text);
+      background-color: var(--app-main-back);
+      &.item:hover {
+        background-color: var(--menu-active-back);
+      }
+      // border-color: var(--menu-active-border);
+    }
     .menu {
       font-size: 0.8rem;
       padding-left: 0.5rem;
-      margin-bottom: 0;
+      // padding-right: 0.5rem;
+      margin-top: 0rem;
+      margin-bottom: 0rem;
       a {
         line-height: 1.5;
+      }
+      &.ranges {
+        --background: var(--app-main-back);
+        --active-background: var(--menu-hover-back);
+        --swatch-background: var(--app-main-back);
+        padding-bottom: 0.5rem;
+        background-color: var(--app-main-back);
+        a {
+          background-color: var(--app-main-back);
+          display: flex;
+          &:hover {
+            background-color: var(--menu-hover-back);
+          }
+          &.active {
+            // border: 0px solid red;
+            color: black;
+            background-color: var(--active-background);
+            // background-color: var(--brand-90);
+          }
+        }
+        .swatch {
+          margin: -0.25em 0.5em -0.25em -0.5em;
+          width: 2em;
+          height: 2em;
+          background-color: var(--swatch-background);
+        }
       }
     }
   }
