Cleaned up curve editor

--- a/website/styles/modules/all.scss
+++ b/website/styles/modules/all.scss
@@ -4,5 +4,7 @@
 @import "utils.scss";
 @import "code.scss";
 @import "icon.scss";
+@import "options.scss";
 @import "palette.scss";
-@import "svg.scss";
+@import "swatches.scss";
+@import "chart.scss";
