Help and other niceties

--- a/website/styles/modules/swatches.scss
+++ b/website/styles/modules/swatches.scss
@@ -13,6 +13,7 @@
       .stop {
         font-size: $size-small;
         margin-bottom: 1em;
+        line-height: 1;
       }
       .specs {
         font-size: $size-smaller;
