--- a/website/styles/modules/editor.scss
+++ b/website/styles/modules/editor.scss
@@ -3,14 +3,15 @@ div.editor {
     margin-bottom: 0.25rem;
     .options {
       display: flex;
-      --option-back: var(--grey-90);
-      --option-hover-back: var(--grey-100);
+      --option-back: var(--editor-option-back);
+      --option-hover-back: var(--editor-option-hover-back);
       padding-right: 0;
     }
   }
   svg.graph {
+    --background: white;
     --outline: var(--grey-60);
-    --border-line: var(--grey-50);
+    --border-line: var(--grey-60);
     --grid-line: var(--grey-60);
     --stop-stroke: var(--pink-50);
     --stop-fill: var(--pink-70);
@@ -32,18 +33,18 @@ div.editor {
     --stop-line-stroke: var(--violet-50);
     --stop-control-stroke: var(--violet-50);
     --stop-control-fill: var(--violet-70);
-    --control-opacity: 0.5;
-    --control-hover-opacity: 0.9;
+    --control-opacity: 0.6;
+    --control-hover-opacity: 1;
 
     width: 100%;
-    user-select: none;
-    background-color: white;
     margin: 0;
+    user-select: none;
+    background-color: var(--background);
     border: 1px solid var(--outline);
     .grid {
       rect {
         fill: none;
-        stroke-width: 0.5;
+        stroke-width: 0.4;
         stroke: var(--border-line);
       }
       line {
@@ -69,7 +70,7 @@ div.editor {
     }
     .curve {
       .point {
-        stroke-width: 1;
+        stroke-width: 0.5;
         opacity: var(--control-opacity);
         &.hover {
           opacity: var(--control-hover-opacity);
@@ -94,7 +95,7 @@ div.editor {
       }
       polyline {
         fill: none;
-        stroke-width: 1;
+        stroke-width: 0.8;
         stroke-linecap: round;
         stroke: var(--curve-stroke);
       }
@@ -106,7 +107,7 @@ div.editor {
         stroke-dasharray: 1.5 0.5;
       }
       circle {
-        stroke-width: 1;
+        stroke-width: 0.5;
         stroke: var(--stop-control-stroke);
         fill: var(--stop-control-fill);
         opacity: var(--control-opacity);
@@ -129,5 +130,29 @@ div.editor {
         line-height: 1.5;
       }
     }
+  }
+}
+
+
+
+
+#site.dark {
+  svg.graph {
+    --background: black;
+    --outline: var(--grey-30);
+    --border-line: var(--grey-30);
+    --grid-line: var(--grey-50);
+    // --stop-stroke: var(--pink-50);
+    --stop-fill: var(--pink-30);
+    --locked-stroke: var(--grey-40);
+    --locked-fill: var(--grey-30);
+    --control-stroke: var(--blue-50);
+    --control-fill: var(--blue-20);
+    --curve-stroke: var(--blue-50);
+    //--stop-line-stroke: var(--violet-50);
+    //--stop-control-stroke: var(--violet-50);
+    --stop-control-fill: var(--violet-30);
+    --control-opacity: 0.5;
+    --control-hover-opacity: 0.9;
   }
 }
