--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -8,16 +8,20 @@
   --app-back:             var(--grey-70);
   --app-main-back:        var(--grey-90);
   --app-side-back:        var(--grey-70);
+  --app-side-border:      var(--grey-60);
+  --app-side-shadow:    rgba(0, 0, 0, 0.04);
+  --app-top-shadow:     rgba(0, 0, 0, 0.15);
   --footer-text:          var(--grey-70);
   --footer-back:          var(--grey-30);
-  --menu-text:            var(--brand-30);
-  --menu-back:            var(--grey-70);
-  --menu-border:          var(--grey-90);
+  --menu-text:            var(--grey-10);
+  --menu-back:            var(--app-side-back);
+  --menu-border:          var(--app-side-back);
   --menu-hover-text:      var(--brand-20);
-  --menu-hover-back:      var(--brand-80);
-  --menu-hover-border:    var(--brand-70);
+  --menu-hover-back:      var(--grey-90);
+  --menu-hover-border:    var(--app-side-back);
   --menu-active-text:     var(--brand-20);
-  --menu-active-back:     var(--brand-70);
+  --menu-active-back:     var(--grey-90);
+  // --menu-active-back:     var(--brand-60);
   --menu-active-border:   var(--brand-60);
   --hover-text:           var(--blue-40);
   --code-back:            var(--brand-90);
@@ -32,10 +36,11 @@
   --dialog-back:          var(--grey-100);
   --dialog-border:        var(--grey-20);
   --dialog-backdrop:      rgba(black, 0.5);
-  --option-back:          var(--grey-70);
-  --option-hover-back:    var(--grey-90);
-  --editor-option-back:       var(--grey-90);
+  --option-back:          var(--app-side-back);
+  --option-hover-back:    var(--menu-hover-back);
+  --editor-option-back:       var(--app-main-back);
   --editor-option-hover-back: var(--grey-100);
+  --swatch-radius:        4px;
 }
 #site.dark {
   --body-text:          var(--grey-60);
@@ -45,18 +50,22 @@
   --navbar-link:        var(--brand-70);
   --navbar-hover:       var(--brand-90);
   --app-back:           var(--grey-0);
-  --app-main-back:      var(--grey-10);
-  --app-side-back:      var(--grey-0);
+  --app-main-back:      var(--grey-20);
+  --app-side-back:      var(--grey-10);
+  --app-side-border:    var(--grey-30);
+  --app-side-shadow:   rgba(0, 0, 0, 0.2);
+  --app-top-shadow:    rgba(0, 0, 0, 0.2);
   --footer-text:        var(--grey-60);
   --footer-back:        var(--grey-30);
   --menu-text:          var(--grey-60);
-  --menu-back:          var(--grey-0);
+  --menu-back:          var(--app-side-back);
   --menu-border:        var(--grey-10);
   --menu-hover-text:    var(--grey-70);
-  --menu-hover-back:    var(--brand-20);
+  --menu-hover-back:    var(--grey-0);
   --menu-hover-border:  var(--brand-50);
   --menu-active-text:   var(--brand-80);
-  --menu-active-back:   var(--brand-40);
+  // --menu-active-back:   var(--grey-40);
+  --menu-active-back:   var(--grey-30);
   --menu-active-border: var(--brand-60);
   --hover-text:         var(--blue-60);
   --code-back:          var(--brand-10);
@@ -71,8 +80,8 @@
   --dialog-back:          var(--grey-10);
   --dialog-border:        var(--grey-20);
   --dialog-backdrop:      rgba(white, 0.5);
-  --option-back:          var(--grey-0);
-  --option-hover-back:    var(--grey-10);
-  --editor-option-back:       var(--grey-10);
-  --editor-option-hover-back: var(--grey-0);
+  --option-back:          var(--app-side-back);
+  --option-hover-back:    var(--grey-0);
+  --editor-option-back:       var(--app-main-back);
+  --editor-option-hover-back: var(--grey-10);
 }
