--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -14,12 +14,18 @@
     background-color: var(--app-panel-back);
     // padding: $gap;
     overflow-y: scroll;
+    // box-shadow: inset 0 2px 2px var(--app-shadow);
     // box-shadow: var(--shadow-1);
   }
   & > aside {
     $padding: 0.5rem;
+    // padding: $padding 0 $padding $padding;
+    padding: $padding;
     background-color: var(--app-side-back);
-    padding: $padding 0 $padding $padding;
+    border-right: 1px solid var(--app-side-border);
+    box-shadow:
+      inset 0 6px 4px -4px var(--app-top-shadow),
+      inset -2px 0 2px var(--app-side-shadow);
     flex-basis: 320px;
     transition: margin 300ms ease-in-out;
   }
@@ -28,6 +34,7 @@
     margin-left: 0;
     flex-basis: 100%;
     padding: 1.5rem 2rem;
+    box-shadow: inset 0 4px 3px -2px var(--app-top-shadow);
     &.wide {
       margin-left: 0;
       flex-basis: 100%;
@@ -45,7 +52,7 @@
 #app > aside {
   .menu {
     border: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     user-select: none;
     h4 {
       margin-bottom: 0.5rem;
@@ -53,6 +60,10 @@
     a {
       color: var(--menu-text);
       text-decoration: none;
+      font-size: $size-smallish;
+    }
+    .options {
+      font-size: $size-smallish;
     }
 
     .item {
@@ -60,6 +71,7 @@
       display: block;
       margin-bottom: 0rem;
       padding: 0.25rem 0.5rem;
+      border-radius: 4px;
       background-color: var(--menu-back);
       border-bottom: 1px solid var(--menu-border);
       cursor: pointer;
@@ -77,7 +89,7 @@
     }
     .active {
       color: var(--menu-active-text);
-      background-color: var(--app-main-back);
+      background-color: var(--menu-active-back);
       &.item:hover {
         background-color: var(--menu-active-back);
       }
@@ -85,7 +97,7 @@
     }
     .menu {
       font-size: 0.8rem;
-      padding-left: 0.5rem;
+      padding-left: 0.75rem;
       // padding-right: 0.5rem;
       margin-top: 0rem;
       margin-bottom: 0rem;
@@ -94,20 +106,18 @@
       }
       &.ranges {
         --background: var(--app-main-back);
-        --active-background: var(--menu-hover-back);
+        --active-light-background: var(--menu-hover-back);
+        --active-dark-background: var(--menu-hover-back);
+        --active-background: var(--active-light-background);
         --swatch-background: var(--app-main-back);
         padding-bottom: 0.5rem;
-        background-color: var(--app-main-back);
         a {
-          background-color: var(--app-main-back);
           display: flex;
           &:hover {
-            background-color: var(--menu-hover-back);
           }
           &.active {
-            // border: 0px solid red;
             color: black;
-            background-color: var(--active-background);
+            background-color: var(--active-light-background);
             // background-color: var(--brand-90);
           }
         }
@@ -116,6 +126,7 @@
           width: 2em;
           height: 2em;
           background-color: var(--swatch-background);
+          border-radius: 3px;
         }
       }
     }
