--- a/website/styles/modules/palette.scss
+++ b/website/styles/modules/palette.scss
@@ -26,6 +26,27 @@ section.palette {
   }
   .ranges {
     margin: 1rem 0;
+    &.nameless {
+      .swatch {
+        border-radius: 0;
+      }
+      .range:first-child {
+        .swatch:first-child {
+          border-top-left-radius: var(--swatch-radius);
+        }
+        .swatch:last-child {
+          border-top-right-radius: var(--swatch-radius);
+        }
+      }
+      .range:last-child {
+        .swatch:first-child {
+          border-bottom-left-radius: var(--swatch-radius);
+        }
+        .swatch:last-child {
+          border-bottom-right-radius: var(--swatch-radius);
+        }
+      }
+    }
   }
   .range-editor {
     margin-top: 1rem;
