Help and layout tweaks

--- a/styles/core/responsive.scss
+++ b/styles/core/responsive.scss
@@ -10,5 +10,8 @@
     [class*="grid-"].stack-#{$name} {
       grid-template-columns: 1fr;
     }
+    .flex.stack-#{$name} {
+      display: block !important;
+    }
   }
 }
