--- a/website/styles/modules/editor.scss
+++ b/website/styles/modules/editor.scss
@@ -149,8 +149,8 @@ div.editor {
     --control-stroke: var(--blue-50);
     --control-fill: var(--blue-20);
     --curve-stroke: var(--blue-40);
-    //--stop-line-stroke: var(--violet-50);
-    //--stop-control-stroke: var(--violet-50);
+    --stop-line-stroke: var(--violet-60);
+    --stop-control-stroke: var(--violet-60);
     --stop-control-fill: var(--violet-30);
     --control-opacity: 0.7;
     --control-hover-opacity: 1;
