--- a/website/styles/modules/swatches.scss
+++ b/website/styles/modules/swatches.scss
@@ -1,9 +1,7 @@
 .swatches {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  .span-all {
-    grid-column: 1/-1;
-  }
+  // box-shadow: 2px 3px 6px var(--swatch-shadow);
   .swatch {
     position: relative;
     font-size: $size-small;
