--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -41,6 +41,8 @@
   --editor-option-back:       var(--app-main-back);
   --editor-option-hover-back: var(--grey-100);
   --swatch-radius:        4px;
+  --swatch-shadow:      rgba(0, 0, 0, 0.05);
+
 }
 #site.dark {
   --body-text:          var(--grey-60);
@@ -84,4 +86,5 @@
   --option-hover-back:    var(--grey-0);
   --editor-option-back:       var(--app-main-back);
   --editor-option-hover-back: var(--grey-10);
+  --swatch-shadow:      rgba(0, 0, 0, 0.15);
 }
