Standard palette hexes

--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -132,4 +132,9 @@
     }
   }
 }
-
+#site.dark {
+  #app > aside .menu .menu.ranges a.active {
+    background-color: var(--active-dark-background);
+    color: white;
+  }
+}
