--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -33,9 +33,9 @@
   --output-back:          var(--grey-90);
   --output-border:        var(--brand-70);
   --output-text:          var(--grey-30);
-  --dialog-back:          var(--grey-100);
-  --dialog-border:        var(--grey-20);
-  --dialog-backdrop:      rgba(black, 0.5);
+  // --dialog-back:          var(--grey-100);
+  // --dialog-border:        var(--grey-20);
+  // --dialog-backdrop:      rgba(black, 0.5);
   --option-back:          var(--app-side-back);
   --option-hover-back:    var(--menu-hover-back);
   --editor-option-back:       var(--app-main-back);
@@ -79,9 +79,6 @@
   --output-back:          var(--grey-20);
   --output-border:        var(--brand-10);
   --output-text:          var(--grey-70);
-  --dialog-back:          var(--grey-10);
-  --dialog-border:        var(--grey-20);
-  --dialog-backdrop:      rgba(white, 0.5);
   --option-back:          var(--app-side-back);
   --option-hover-back:    var(--grey-0);
   --editor-option-back:       var(--app-main-back);
