--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -1,40 +1,38 @@
 
 #app {
   $gap: 1rem;
+  $theme-transition: 0.5s;
   position: relative;
-  background-color: var(--app-back);
+  // background-color: var(--app-back);
+  background-color: var(--app-main-back);
   width: 100%;
   height: calc(100vh - #{$navbar-height});
   padding: 0;
   display: flex;
-  // box-shadow: inset 0 2px 2px rgba($black, 0.1);
   & > aside,
   & > main {
-    transition: all 0.2s;
+    // transition: all 0.2s;
     background-color: var(--app-panel-back);
-    // padding: $gap;
     overflow-y: scroll;
-    // box-shadow: inset 0 2px 2px var(--app-shadow);
-    // box-shadow: var(--shadow-1);
+    transition: background-color $theme-transition ease-in-out;
   }
   & > aside {
-    $padding: 0.5rem;
-    // padding: $padding 0 $padding $padding;
-    padding: $padding;
+    padding: var(--sidebar-padding);
     background-color: var(--app-side-back);
     border-right: 1px solid var(--app-side-border);
     box-shadow:
       inset 0 6px 4px -4px var(--app-top-shadow),
       inset -2px 0 2px var(--app-side-shadow);
-    flex-basis: 320px;
-    transition: margin 300ms ease-in-out;
+    flex-basis: var(--sidebar-width);
+    margin-left: var(--sidebar-margin-left);
+    transition: margin-left 300ms ease-in-out;
+    transition: background-color $theme-transition ease-in-out;
   }
   & > main {
     background-color: var(--app-main-back);
     margin-left: 0;
     flex-basis: 100%;
     padding: 1.5rem 2rem;
-    box-shadow: inset 0 4px 3px -2px var(--app-top-shadow);
     &.wide {
       margin-left: 0;
       flex-basis: 100%;
@@ -65,20 +63,19 @@
     .options {
       font-size: $size-smallish;
     }
-
     .item {
-      transition: all 0.5s;
+      transition: background-color 0.5s;
       display: block;
       margin-bottom: 0rem;
       padding: 0.25rem 0.5rem;
       border-radius: 4px;
-      background-color: var(--menu-back);
-      border-bottom: 1px solid var(--menu-border);
+      // border-bottom: 1px solid var(--menu-border);
+      // background-color: var(--menu-back);
       cursor: pointer;
       // border-left: 5px solid var(--menu-border);
       // box-shadow: var(--shadow-1);
       &:hover {
-        transition: all 0.2s;
+        transition: background-color 0.2s;
         color: var(--menu-hover-text);
         background-color: var(--menu-hover-back);
         // border-color: var(--menu-hover-border);
