--- a/website/styles/modules/options.scss
+++ b/website/styles/modules/options.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     padding: 0.25rem 0.5rem;
-    background-color: var(--option-back);
+    // background-color: var(--option-back);
     border-radius: 4px;
     transition: all 0.25s;
     line-height: 1;
