Header and footer

--- a/website/styles/modules/palette.scss
+++ b/website/styles/modules/palette.scss
@@ -24,13 +24,6 @@ section.palette {
   h2 + h3 {
     margin-top: 0;
   }
-  .controls {
-    flex-basis: 400px;
-    font-size: $size-smallish;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-  }
-
   .ranges {
     margin: 1rem 0;
     &.nameless {
@@ -59,6 +52,14 @@ section.palette {
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
+}
+
+section.palette > header .controls,
+section.range > header .controls {
+  flex-basis: 400px;
+  font-size: $size-smallish;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 #site.dark {
