--- a/website/styles/modules/site.scss
+++ b/website/styles/modules/site.scss
@@ -23,6 +23,7 @@
     padding: 0 1rem;
     font-size: $size-largish;
     line-height: 1rem;
+    border-bottom: 1px solid var(--navbar-border);
     a, .action, .night-and-day--switcher {
       text-decoration: none;
       color: var(--navbar-link);
@@ -35,6 +36,8 @@
     color: var(--footer-text);
     background-color: var(--footer-back);
     padding: 1rem;
+    border-top: 1px solid var(--footer-border);
+    box-shadow: inset 0 2px 4px var(--app-top-shadow);
   }
   &.no-sidebar {
     --sidebar-margin-left: -320px;
