--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -1,18 +1,20 @@
 :where(html) {
   --body-text:            var(--grey-20);
   --head-text:            var(--grey-20);
-  --navbar-back:          var(--grey-40);
-  --navbar-text:          var(--grey-90);
-  --navbar-link:          var(--grey-70);
-  --navbar-hover:         var(--brand-100);
+  --navbar-back:          var(--grey-100);
+  --navbar-text:          var(--grey-40);
+  --navbar-link:          var(--grey-30);
+  --navbar-hover:         var(--grey-0);
+  --navbar-border:        var(--grey-60);
   --app-back:             var(--grey-70);
   --app-main-back:        var(--grey-90);
   --app-side-back:        var(--grey-70);
   --app-side-border:      var(--grey-60);
   --app-side-shadow:    rgba(0, 0, 0, 0.04);
-  --app-top-shadow:     rgba(0, 0, 0, 0.1);
-  --footer-text:          var(--grey-70);
-  --footer-back:          var(--grey-30);
+  --app-top-shadow:     rgba(0, 0, 0, 0.08);
+  --footer-text:          var(--grey-40);
+  --footer-back:          var(--grey-60);
+  --footer-border:        var(--grey-50);
   --menu-text:            var(--grey-10);
   --menu-back:            var(--app-side-back);
   --menu-border:          var(--app-side-back);
@@ -51,14 +53,17 @@
   --navbar-text:        var(--grey-60);
   --navbar-link:        var(--grey-70);
   --navbar-hover:       var(--grey-90);
+  --navbar-border:      var(--grey-20);
   --app-back:           var(--grey-0);
   --app-main-back:      var(--grey-20);
   --app-side-back:      var(--grey-10);
   --app-side-border:    var(--grey-30);
   --app-side-shadow:   rgba(0, 0, 0, 0.2);
   --app-top-shadow:    rgba(0, 0, 0, 0.15);
-  --footer-text:        var(--grey-60);
-  --footer-back:        var(--grey-30);
+  --footer-text:        var(--grey-40);
+  --footer-back:        var(--grey-0);
+  // --footer-border:      var(--grey-0);
+  --footer-border:      black;
   --menu-text:          var(--grey-60);
   --menu-back:          var(--app-side-back);
   --menu-border:        var(--grey-10);
