--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -37,6 +37,7 @@ $item-margin-left: 0.5rem;
       margin-left: 0;
       flex-basis: 100%;
     }
+    box-shadow:  2px 4px 6px var(--app-top-shadow);
   }
   .section {
     font-size: 1rem;
