--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -1,28 +1,29 @@
 :where(html) {
   --body-text:            var(--grey-20);
   --head-text:            var(--grey-20);
-  --navbar-back:          var(--grey-100);
+  --navbar-back:          var(--blue-100);
+  // --navbar-back:          var(--grey-100);
   --navbar-text:          var(--grey-40);
   --navbar-link:          var(--grey-30);
   --navbar-hover:         var(--grey-0);
   --navbar-border:        var(--grey-60);
   --app-back:             var(--grey-70);
   --app-main-back:        var(--grey-90);
-  --app-side-back:        var(--grey-70);
+  --app-side-back:        var(--grey-80);
   --app-side-border:      var(--grey-60);
   --app-side-shadow:    rgba(0, 0, 0, 0.04);
   --app-top-shadow:     rgba(0, 0, 0, 0.08);
   --footer-text:          var(--grey-40);
-  --footer-back:          var(--grey-60);
+  --footer-back:          var(--grey-70);
   --footer-border:        var(--grey-50);
   --menu-text:            var(--grey-10);
   --menu-back:            var(--app-side-back);
   --menu-border:          var(--app-side-back);
   --menu-hover-text:      var(--brand-20);
-  --menu-hover-back:      var(--grey-90);
+  --menu-hover-back:      var(--grey-80);
   --menu-hover-border:    var(--app-side-back);
   --menu-active-text:     var(--brand-20);
-  --menu-active-back:     var(--grey-90);
+  --menu-active-back:     var(--grey-80);
   // --menu-active-back:     var(--brand-60);
   --menu-active-border:   var(--brand-60);
   --hover-text:           var(--blue-40);
@@ -56,23 +57,23 @@
   --navbar-border:      var(--grey-20);
   --app-back:           var(--grey-0);
   --app-main-back:      var(--grey-20);
-  --app-side-back:      var(--grey-10);
+  --app-side-back:      var(--grey-15);
   --app-side-border:    var(--grey-30);
   --app-side-shadow:   rgba(0, 0, 0, 0.2);
   --app-top-shadow:    rgba(0, 0, 0, 0.15);
   --footer-text:        var(--grey-40);
-  --footer-back:        var(--grey-0);
+  --footer-back:        var(--grey-10);
   // --footer-border:      var(--grey-0);
   --footer-border:      black;
   --menu-text:          var(--grey-60);
   --menu-back:          var(--app-side-back);
   --menu-border:        var(--grey-10);
   --menu-hover-text:    var(--grey-70);
-  --menu-hover-back:    var(--grey-0);
+  --menu-hover-back:    var(--grey-20);
   --menu-hover-border:  var(--brand-50);
   --menu-active-text:   var(--brand-80);
   // --menu-active-back:   var(--grey-40);
-  --menu-active-back:   var(--grey-30);
+  --menu-active-back:   var(--grey-20);
   --menu-active-border: var(--brand-60);
   --hover-text:         var(--blue-60);
   --code-back:          var(--brand-10);
