--- a/website/styles/website.scss
+++ b/website/styles/website.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 @import '@abw/react-night-and-day/styles/night-and-day.css';
-@import '@abw/react-formula/styles/formula.scss';
+// @import '@abw/react-formula/styles/formula.scss';
 $brand-color: 'violet';
 $dark-theme: '#site.dark';
 @import "../../styles/badger-css.scss";
