New standard palettes

--- a/website/styles/modules/all.scss
+++ b/website/styles/modules/all.scss
@@ -4,7 +4,7 @@
 @import "utils.scss";
 @import "code.scss";
 @import "icon.scss";
-@import "options.scss";
+// @import "options.scss";
 @import "palette.scss";
 @import "swatches.scss";
 @import "editor.scss";
