Website updates and exporter functionality

--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -59,10 +59,10 @@ $item-margin-left: 0.5rem;
     a {
       color: var(--menu-text);
       text-decoration: none;
-      font-size: $size-smallish;
+      font-size: $size-small;
     }
     .options {
-      font-size: $size-smallish;
+      font-size: $size-small;
     }
     .item {
       transition: background-color 0.5s;
