--- a/website/styles/modules/typography.scss
+++ b/website/styles/modules/typography.scss
@@ -20,7 +20,7 @@ p {
   margin-block-end: 1rem;
 }
 p.intro {
-  font-size: $size-largish;
+  font-size: $size-large;
 }
 li {
   margin-bottom: 1rem;
