--- a/website/styles/modules/all.scss
+++ b/website/styles/modules/all.scss
@@ -9,5 +9,5 @@
 @import "swatches.scss";
 @import "editor.scss";
 @import "examples.scss";
-@import "dialog.scss";
+// @import "dialog.scss";
 @import "chart.scss";
